# mcu-demo

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  build.rs  memory.x
.cargo/: config.toml
proto/: device.proto
src/: main copy.rs  main.rs  main_n.rs  router.rs
src/device/: command.rs  led.rs  mod.rs
src/event/: mod.rs
src/handler/: base.rs  mod.rs  nb_handler.rs
src/io/: data.rs  mod.rs
src/protocol/: mod.rs
src/system/: mod.rs
