[package]
name = "stm32"
version = "0.1.0"
edition = "2024"

# -------------------------------------------------------------------
# Release 配置说明（适用于 MCU 量产固件）
#
# 注意：
#   1. 这些优化会让固件更小、更难逆向，但也会让调试变困难。
#   2. 开发阶段建议关闭 strip/debug，以便能看到符号和汇编。
# -------------------------------------------------------------------
[profile.release]

# 去掉调试符号（DWARF）
# - 使固件更小
# - 保护代码不被逆向
# - 但会让 GDB/probe-rs 无法调试（开发阶段可设为 true）
debug = false

# 启用链接时优化（Link Time Optimization）
# - 全局优化整个程序
# - 删除 dead code
# - 进一步缩小尺寸，提高速度与安全性
lto = true

# 把优化目标设为“最小尺寸”
# - 程序体积最小化（比 opt-level="s" 更激进）
# - 默认删除空循环、合并函数、强推 inline
# - 会让反汇编更难阅读（开发阶段可用 opt-level=2）
opt-level = "z"

# 移除符号表（strip）
# - 删除所有函数名、局部符号等元信息
# - 固件最小化 & 逆向难度大幅增加（非常适合保护算法）
# - 调试期间不要启用（否则 objdump 看不到符号）
strip = true

# panic 行为设置为“立即终止”
# - MCU 必须使用 abort；不能使用 unwind（裸机不支持栈展开）
# - 保证 panic 行为可靠、简单、无 OS 依赖
# - 减少体积（不生成 unwinding 代码）
panic = "abort"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7.5"
# stm32f4xx-hal = {version = "0.23.0", features = ["stm32f407"]}
stm32f1xx-hal = {version = "0.11.0", features = ["stm32f103"]} # 雄伟的板
prost = { version = "0.14.1", default-features = false, features = ["derive"] }
heapless = { version = "0.9.2", default-features = false }
nb = "1.1"
embedded-alloc = "0.6"

[dependencies.stm32f1]
version = "0.15.1"
features = ["stm32f103"]


[build-dependencies]
prost-build = "0.14.1"
