[package]
name = "stm32"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = {version ="0.7.5" , features = ["device"] }
stm32f4xx-hal = {version = "0.23.0", features = ["stm32f407"]}
prost = { version = "0.14.1", default-features = false, features = ["derive"] }
heapless = { version = "0.9.2", default-features = false }
nb = "1.1"
# defmt = { version = "1.0" }
# defmt-rtt = { version = "1.0"}





